@@ -4,8 +4,22 @@ config BR2_PACKAGE_NBD
 	help
 	  NBD is a set of utilities to configure network block devices,
 	  allowing access to remote block devices over TCP/IP network.
-	  Notice: This package only provides the NBD client.
 
 	  Depends on glib.
 
 	  http://nbd.sf.net/
+
+if BR2_PACKAGE_NBD
+
+config BR2_NBD_CLIENT
+	bool "nbd client"
+	default y
+	help
+	  the client part of NBD.
+
+config BR2_NBD_SERVER
+	bool "nbd server"
+	help
+	  the server part of NBD.
+
+endif
